build_log.txt
To honour the JVM settings for this build a single-use Daemon process will be forked. For more on this, please refer to https://docs.gradle.org/9.2.1/userguide/gradle_daemon.html#sec:disabling_the_daemon in the Gradle documentation.
Daemon will be stopped at the end of the build 

> Configure project :Common
SpongePowered Vanilla 'GRADLE' Toolset Version '0.2.1-SNAPSHOT'
Targeting Minecraft '1.21.11' on a 'JOINED' platform

> Configure project :Fabric
Fabric Loom: 1.14.10

> Task :Common:compileJava FAILED
D:\Projects 2.0\Minecraft\passivechunker\passive-chunker\Common\src\main\java\dev\agnor\passivepregen\CommonClass.java:65: error: cannot find symbol
        spawnPoint = new StaticLevelPos(Level.OVERWORLD, server.overworld().getSpawnPos().getX(),
                                                                           ^
  symbol:   method getSpawnPos()
  location: class ServerLevel
D:\Projects 2.0\Minecraft\passivechunker\passive-chunker\Common\src\main\java\dev\agnor\passivepregen\CommonClass.java:66: error: cannot find symbol
                server.overworld().getSpawnPos().getZ());
                                  ^
  symbol:   method getSpawnPos()
  location: class ServerLevel
D:\Projects 2.0\Minecraft\passivechunker\passive-chunker\Common\src\main\java\dev\agnor\passivepregen\levelpos\StaticIdentifiableLevelPos.java:37: error: method get in class Optional<T> cannot be applied to given types;
                        chunkPosCoord(tag.getList("Pos").get(0)),
                                                        ^
  required: no arguments
  found:    int
  reason: actual and formal argument lists differ in length
  where T is a type-variable:
    T extends Object declared in class Optional
D:\Projects 2.0\Minecraft\passivechunker\passive-chunker\Common\src\main\java\dev\agnor\passivepregen\levelpos\StaticIdentifiableLevelPos.java:38: error: method get in class Optional<T> cannot be applied to given types;
                        chunkPosCoord(tag.getList("Pos").get(2))));
                                                        ^
  required: no arguments
  found:    int
  reason: actual and formal argument lists differ in length
  where T is a type-variable:
    T extends Object declared in class Optional
4 errors

[Incubating] Problems report is available at: file:///D:/Projects%202.0/Minecraft/passivechunker/passive-chunker/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':Common:compileJava'.
> Compilation failed; see the compiler output below.
  D:\Projects 2.0\Minecraft\passivechunker\passive-chunker\Common\src\main\java\dev\agnor\passivepregen\levelpos\StaticIdentifiableLevelPos.java:37: error: method get in class Optional<T> cannot be applied to given types;
                          chunkPosCoord(tag.getList("Pos").get(0)),
                                                          ^
    required: no arguments
    found:    int
    reason: actual and formal argument lists differ in length
    where T is a type-variable:
      T extends Object declared in class Optional
  D:\Projects 2.0\Minecraft\passivechunker\passive-chunker\Common\src\main\java\dev\agnor\passivepregen\levelpos\StaticIdentifiableLevelPos.java:38: error: method get in class Optional<T> cannot be applied to given types;
                          chunkPosCoord(tag.getList("Pos").get(2))));
                                                          ^
    required: no arguments
    found:    int
    reason: actual and formal argument lists differ in length
    where T is a type-variable:
      T extends Object declared in class Optional
  D:\Projects 2.0\Minecraft\passivechunker\passive-chunker\Common\src\main\java\dev\agnor\passivepregen\CommonClass.java:65: error: cannot find symbol
          spawnPoint = new StaticLevelPos(Level.OVERWORLD, server.overworld().getSpawnPos().getX(),
                                                                             ^
    symbol:   method getSpawnPos()
    location: class ServerLevel
  D:\Projects 2.0\Minecraft\passivechunker\passive-chunker\Common\src\main\java\dev\agnor\passivepregen\CommonClass.java:66: error: cannot find symbol
                  server.overworld().getSpawnPos().getZ());
                                    ^
    symbol:   method getSpawnPos()
    location: class ServerLevel
  4 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.2.1/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 7s
1 actionable task: 1 executed
